# AurigaSQL

./: .env.example  .gitignore  README.md  pyproject.toml  run_experiment.py
backend/: .gitignore  requirements-build.txt  requirements.txt
backend/api/: app.py  handlers.py  schemas.py
backend/api/routers/: __init__.py  data_sources.py  insights.py  models.py  sessions.py  system.py
backend/data/: __init__.py  bundled_demo.py  models.py  registry.py
backend/data/connections/: __init__.py  demo.py  user.py  validation.py
backend/data/engines/: __init__.py  duckdb.py  models.py  mysql.py  postgres.py  session.py  sql_utils.py  sqlite.py
backend/packaging/: README.md  aurigasql_bff.py  build-macos.sh  build-windows.ps1  smoke-packaged-backend.py
backend/runtime/: __init__.py  events.py  runtime.py  trajectory_adapter.py
backend/scripts/: start_detached.py  start_services.sh
backend/shared/: config.py  llama_runtime.py  llm.py  llm_logger.py  llm_profile_store.py  model_registry.py
backend/tests/: test_llama_runtime.py
datasets/demo/: README.md  build-report.json  demo_questions.json  manifest.json
frontend/: .env.example  .gitignore  README.md  dev.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/electron/: bundled-model.cjs  main.cjs  preload.cjs
frontend/scripts/: prepare-llama-runtime.cjs
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: bff.test.ts  bff.ts  (+2 more)
src/dbagent/: __init__.py  config.py
tools/demo-data/: build_demo_datasets.py  demo_datasets.json  docker-compose.yml
(+152 files in other folders)
