[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dbagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cloudflare",
    "datasets",  # ensures `import datasets` resolves to HF (not the repo's datasets/ dir), which lancedb's optional converter imports
    "dbt-core",
    "dbt-duckdb",
    "duckdb",
    "func-timeout",
    "gdown",
    "lancedb",
    "litellm",
    "numpy",
    "pandas",
    "psycopg",
    "pyyaml",
    "python-dotenv",
    "sentence-transformers",
    "sqlglot",
    "tenacity",
]

[tool.setuptools.packages.find]
where = ["src"]
