[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aurigasql"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "litellm>=1.0.0",
    "psycopg>=3.1.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "sqlglot>=23.0.0",
    "tenacity>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
